Verandering van belangrijke tekst

--- a/sepa-batch-payments.html
+++ b/sepa-batch-payments.html
@@ -225,7 +225,7 @@
       </fieldset>
       <p>
           <textarea name="mass-edit-csv" id="mass-edit-csv" rows="20" cols="80">
-Met TOM op de koffie!, NL13TEST0123456789, Restitutie kopje koffie, 35.35
+Fris en Fruitig!, NL13TEST0123456789, Restitutie kopje koffie, 36.36
 Ook met tabs	NL13TEST0123456789	kan dit script overweg	42.42
 {naam}, {IBAN}, {omschrijving}, {bedrag}
 </textarea>
